# generalresearch

./: .gitignore  .onedev-buildspec.yml  Jenkinsfile  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
generalresearch/: __init__.py  cacheing.py  config.py  currency.py  decorators.py  grpc.py  healing_ppe.py  logging.py  mariadb.py  pg_helper.py  priority_thread_pool.py  redis_helper.py  sql_helper.py
generalresearch/grliq/: utils.py
generalresearch/incite/: base.py  defaults.py
generalresearch/locales/: __init__.py  country_default_lang.json  iso3166-1.json  iso639-3.json  setup_json.py  timezone.py
generalresearch/managers/: __init__.py  base.py  criteria.py  events.py  survey.py
generalresearch/models/: __init__.py  custom_types.py  device.py  events.py  string_utils.py  utils.py
generalresearch/schemas/: survey_stats.py
generalresearch/thl_django/: README.md  __init__.py  apps.py  fields.py  postgres-table-tuning.md  postgres.md
generalresearch/utils/: aggregation.py  copying_cache.py  enum.py  grpc_logger.py
generalresearch/wall_status_codes/: __init__.py  cint.py  dynata.py  fullcircle.py  innovate.py  lucid.py  morning.py  pollfish.py  precision.py  prodege.py  repdata.py  sago.py  spectrum.py  wxet.py
test_utils/: conftest.py
test_utils/grliq/: conftest.py
test_utils/incite/: conftest.py
test_utils/managers/: cashout_methods.py  conftest.py
test_utils/models/: conftest.py
test_utils/spectrum/: conftest.py  surveys_json.py
tests/: conftest.py  sql_helper.py
tests/data/: mtr_fatbeam.json  nmaprun1.xml  nmaprun2.xml
(+425 files in other folders)
