[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generalresearch"
version = "3.3.4"
description = "Python Utilities for General Research"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Faker",
    "PyMySQL",
    "psycopg",
    "cachetools",
    "decorator",
    "limits",
    "more-itertools",
    "numpy",
    "pandera",
    "protobuf",
    "pycountry",
    "pydantic-extra-types",
    "pydantic-settings",
    "pydantic[email]",
    "pytest",
    "pylibmc",
    "pymemcache",
    "redis",
    "requests",
    "scipy",
    "sentry-sdk",
    "slackclient",
    "ua-parser",
    "user-agents",
    "wrapt",
]
[project.optional-dependencies]
django = ["Django>=5.2", "psycopg>=3.1"]


[tool.setuptools.packages.find]
where = ["."]
include = ["generalresearch", "generalresearch.*", "test_utils", "test_utils.*"]

[tool.setuptools.package-data]
"generalresearch" = ["locales/*.json", "resources/*.csv"]
"test_utils" = ["managers/upk/*.gz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
